--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -43,8 +43,10 @@ jobs:
       customCommand: 'install -g @lhci/cli@0.14.x'
     displayName: 'install lhci'
   - script: |
-      lhci autorun --collect.url=http://localhost:4200 --collect.startServerCommand="npm start" --collect.numberOfRuns=3 --assert.preset=lighthouse:recommended --upload.target=temporary-public-storage
+      lhci autorun
     displayName: 'Run Lighthouse Audit'
+    env:
+      LHCI_GITHUB_APP_TOKEN: ${{secrets.LHCI_GITHUB_APP_TOKEN}}
   - task: PublishBuildArtifacts@1
     displayName: 'Publish Artifact: drop'
     inputs:
