--- a/.lighthouserc.json
+++ b/.lighthouserc.json
@@ -6,7 +6,14 @@
         "categories:accessibility": ["error", {"minScore": 0.9}],
         "categories:best-practices": ["error", {"minScore": 0.9}],
         "categories:seo": ["error", {"minScore": 0.95}]
-      }
+                    }
+    },
+    "collect": {
+      "startServerCommand": "npm run start",
+      "url": ["http://localhost:4200"],
+      "numberOfRuns": 1,
+      "crawler":{
+        "maxDepth": 5,"maxPages": 10}
     },
     "upload" : {
        "target": "temporary public-storage"
