--- a/.lighthouserc.json
+++ b/.lighthouserc.json
@@ -10,13 +10,14 @@
     },
     "collect": {
       "startServerCommand": "npm run start",
-      "url": ["http://localhost:4200"],
+      "url": ["http://localhost:4200",
+              "http://localhost:4200/login"],
       "numberOfRuns": 1,
       "crawler":{
         "maxDepth": 5,"maxPages": 10}
     },
     "upload" : {
-       "target": "temporary public-storage"
+       "target": "temporary-public-storage"
    }
   }
 }
